--- a/Index.html
+++ b/Index.html
@@ -2,26 +2,10 @@
 <html lang='en'>
 	<head>
 		<meta chaerset='UTF-8'>
-		<title> 📓 Ajay 's blog</title>
+		<title>Web demo</title>
 	</head>
 	
 	<body>
-		<img style="border-radius:50%;" src="default_avatar.png" alt='Rockstar Logo' title='Rockstar Logo' >
-		<h1>Ajay Kumar Singh</h1>
-		<p><em><strong>Working</strong> to have a good working <a href='https://en.wikipedia.org/wiki/Website'>website</a>.</em></p>
-		<p>I am a Data Analyst and web developer.</p>
-		<hr size='3' noshade>
-		<h3>Projects</h3>
-		<ul>
-			<li>Local weather forecasting</li>
-			<li>Soil Fertilizer predictor</li>
-			<li>Wesite based on AI</li>
-		</ul>
-		<h3>Hobbies</h3>
-		<ol>
-			<li><a href='https://github.com/ajaystack'>Coding</a></li>
-			<li>Playing basketball</li>
-			<li>Reading tech stuff</li>
-		</ol>
+		<h1>Hello World!</h1>
 	</body>
 </html>
